// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getPackages() lerna matches snapshot 1`] = `
Array [
  Object {
    "fsPath": "<cwd>/test/fixture/lerna/packages/bar",
    "name": "bar",
  },
  Object {
    "fsPath": "<cwd>/test/fixture/lerna/packages/foo",
    "name": "foo",
  },
]
`;

exports[`getPackages() yarn matches snapshot 1`] = `
Array [
  Object {
    "fsPath": "<cwd>/test/fixture/yarn/packages/bar",
    "name": "bar",
  },
  Object {
    "fsPath": "<cwd>/test/fixture/yarn/packages/foo",
    "name": "foo",
  },
]
`;
